# murmur

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.sh  setup_audio.md
.github/workflows/: python-app.yml
docs/: setup_audio.md
murmur/: __main__.py  cli.py  diarizer.py  live_transcriber.py  llm.py  recorder.py  summarizer.py  transcriber.py  tui.py
murmur/backends/: __init__.py  _faster_whisper.py  _mlx_whisper.py  _whisper.py
notetaking/: __main__.py  cli.py  config.py  diarizer.py  live_transcriber.py  recorder.py  summarizer.py  transcriber.py  tui.py  watcher.py
notetaking/backends/: __init__.py  _faster_whisper.py  _mlx_whisper.py  _whisper.py
tests/: test_backends.py  test_cli.py  test_config.py  test_diarizer.py  test_live_transcriber.py  test_llm.py  test_summarizer.py  test_tui.py  test_watcher.py
