[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "notetaking"
version = "0.2.0"
description = "Meeting notes CLI — record, transcribe, summarize"
requires-python = ">=3.10"
dependencies = [
    "openai-whisper",
    "sounddevice",
    "numpy",
    "scipy",
    "click",
    "rich",
    "python-dotenv",
]

[project.optional-dependencies]
anthropic = ["anthropic"]
openai = ["openai"]
gemini = ["google-generativeai"]
groq = ["groq"]
ollama = ["ollama"]
all = ["anthropic", "openai", "google-generativeai", "groq", "ollama"]

[tool.setuptools.packages.find]
include = ["notetaking*"]

[project.scripts]
notetaking = "notetaking.cli:cli"
